--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </style>
 </head>
 <body>
-    <h1>HTML to Vocabulary Extractor</h1>
+    <h1>StudySmarter Vocabulary Extractor</h1>
     <textarea id="html-input" placeholder="Paste your HTML content here"></textarea>
     <br><br>
     <button id="process-btn">Extract Vocabulary</button>
